deploy integrations
